--- a/templates/index2.html
+++ b/templates/index2.html
@@ -6,6 +6,7 @@
         <!-- socket io client -->
         <script type="text/javascript" src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
         <!-- local js files -->
+        <!--執行js程式-->
         <script src="static/js/application2.js"></script>
         <!-- Bootstrap css -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrit
